полностью рабочий основной функционал
